--- a/data mining/getfixturestatsfinal.ipynb
+++ b/data mining/getfixturestatsfinal.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,6 +87,129 @@
     "                        indent=4,  \n",
     "                        separators=(',',': '))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_file = pd.read_json (r'statsfile')\n",
+    "df_file = df_file.rename(columns={0:'####'})\n",
+    "df_file.to_csv (r'statsfile-2.csv', index = None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>####</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>{\"get\":\"fixtures\\/statistics\",\"parameters\":{\"f...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>{\"get\":\"fixtures\\/statistics\",\"parameters\":{\"f...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>{\"get\":\"fixtures\\/statistics\",\"parameters\":{\"f...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>{\"get\":\"fixtures\\/statistics\",\"parameters\":{\"f...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>{\"get\":\"fixtures\\/statistics\",\"parameters\":{\"f...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>187</th>\n",
+       "      <td>{\"get\":\"fixtures\\/statistics\",\"parameters\":{\"f...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>188</th>\n",
+       "      <td>{\"get\":\"fixtures\\/statistics\",\"parameters\":{\"f...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>189</th>\n",
+       "      <td>{\"get\":\"fixtures\\/statistics\",\"parameters\":{\"f...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>190</th>\n",
+       "      <td>{\"get\":\"fixtures\\/statistics\",\"parameters\":{\"f...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>191</th>\n",
+       "      <td>{\"get\":\"fixtures\\/statistics\",\"parameters\":{\"f...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>192 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  ####\n",
+       "0    {\"get\":\"fixtures\\/statistics\",\"parameters\":{\"f...\n",
+       "1    {\"get\":\"fixtures\\/statistics\",\"parameters\":{\"f...\n",
+       "2    {\"get\":\"fixtures\\/statistics\",\"parameters\":{\"f...\n",
+       "3    {\"get\":\"fixtures\\/statistics\",\"parameters\":{\"f...\n",
+       "4    {\"get\":\"fixtures\\/statistics\",\"parameters\":{\"f...\n",
+       "..                                                 ...\n",
+       "187  {\"get\":\"fixtures\\/statistics\",\"parameters\":{\"f...\n",
+       "188  {\"get\":\"fixtures\\/statistics\",\"parameters\":{\"f...\n",
+       "189  {\"get\":\"fixtures\\/statistics\",\"parameters\":{\"f...\n",
+       "190  {\"get\":\"fixtures\\/statistics\",\"parameters\":{\"f...\n",
+       "191  {\"get\":\"fixtures\\/statistics\",\"parameters\":{\"f...\n",
+       "\n",
+       "[192 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_csv('statsfile-2.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -94,7 +217,7 @@
    "hash": "40d3a090f54c6569ab1632332b64b2c03c39dcf918b08424e98f38b5ae0af88f"
   },
   "kernelspec": {
-   "display_name": "Python 3.7.6 ('base')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -108,9 +231,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
-  },
-  "orig_nbformat": 4
+   "version": "3.8.5"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
