--- a/data mining/getstatscleaning.ipynb
+++ b/data mining/getstatscleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "7c144927",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
+   "id": "2fff4576",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!pip install pandas --upgrade"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9f261952",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.4.1'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "1f9a0ce4",
    "metadata": {},
    "outputs": [],
@@ -27,17 +58,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "0f2be9c0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>####</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>{\"get\":\"fixtures\\/statistics\",\"parameters\":{\"f...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>{\"get\":\"fixtures\\/statistics\",\"parameters\":{\"f...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>{\"get\":\"fixtures\\/statistics\",\"parameters\":{\"f...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>{\"get\":\"fixtures\\/statistics\",\"parameters\":{\"f...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>{\"get\":\"fixtures\\/statistics\",\"parameters\":{\"f...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>187</th>\n",
+       "      <td>{\"get\":\"fixtures\\/statistics\",\"parameters\":{\"f...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>188</th>\n",
+       "      <td>{\"get\":\"fixtures\\/statistics\",\"parameters\":{\"f...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>189</th>\n",
+       "      <td>{\"get\":\"fixtures\\/statistics\",\"parameters\":{\"f...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>190</th>\n",
+       "      <td>{\"get\":\"fixtures\\/statistics\",\"parameters\":{\"f...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>191</th>\n",
+       "      <td>{\"get\":\"fixtures\\/statistics\",\"parameters\":{\"f...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>192 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  ####\n",
+       "0    {\"get\":\"fixtures\\/statistics\",\"parameters\":{\"f...\n",
+       "1    {\"get\":\"fixtures\\/statistics\",\"parameters\":{\"f...\n",
+       "2    {\"get\":\"fixtures\\/statistics\",\"parameters\":{\"f...\n",
+       "3    {\"get\":\"fixtures\\/statistics\",\"parameters\":{\"f...\n",
+       "4    {\"get\":\"fixtures\\/statistics\",\"parameters\":{\"f...\n",
+       "..                                                 ...\n",
+       "187  {\"get\":\"fixtures\\/statistics\",\"parameters\":{\"f...\n",
+       "188  {\"get\":\"fixtures\\/statistics\",\"parameters\":{\"f...\n",
+       "189  {\"get\":\"fixtures\\/statistics\",\"parameters\":{\"f...\n",
+       "190  {\"get\":\"fixtures\\/statistics\",\"parameters\":{\"f...\n",
+       "191  {\"get\":\"fixtures\\/statistics\",\"parameters\":{\"f...\n",
+       "\n",
+       "[192 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#df = pd.read_json('statsfile.json')"
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "id": "6bbba4c0",
    "metadata": {
     "scrolled": false
@@ -49,7 +176,7 @@
        "pandas.core.series.Series"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,17 +187,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "415abb4e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#list(df.iloc[:,0].values)"
+    "df_list = list(df.iloc[:,0].values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
+   "id": "d900ed6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#list(df['####'].values)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "531a8235",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pd.json_normalize(list(df['####'].values))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "47659e86",
    "metadata": {},
    "outputs": [
@@ -144,18 +292,18 @@
        "[192 rows x 0 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.json_normalize(list(df.iloc[:,0].values))"
+    "pd.json_normalize(df_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "64b9b258",
    "metadata": {},
    "outputs": [],
@@ -168,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "b7a58692",
    "metadata": {},
    "outputs": [
@@ -361,7 +509,7 @@
        "[192 rows x 7 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "1ed67f7c",
    "metadata": {},
    "outputs": [
@@ -492,7 +640,7 @@
        "[192 rows x 2 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "id": "9acfc9de",
    "metadata": {},
    "outputs": [
@@ -532,7 +680,7 @@
        " 'team.logo': 'https://media.api-sports.io/football/teams/2.png'}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "id": "f42c8574",
    "metadata": {},
    "outputs": [
@@ -687,7 +835,7 @@
        "[192 rows x 4 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "id": "0f310b03",
    "metadata": {},
    "outputs": [
@@ -1165,7 +1313,7 @@
        "[192 rows x 16 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1177,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "id": "7b3dd73c",
    "metadata": {},
    "outputs": [
@@ -1517,7 +1665,7 @@
        "[192 rows x 16 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1541,7 +1689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "id": "a42281c4",
    "metadata": {},
    "outputs": [
@@ -1685,7 +1833,7 @@
        "[192 rows x 4 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1698,7 +1846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "id": "f47f5b6e",
    "metadata": {},
    "outputs": [
@@ -2155,7 +2303,7 @@
        "[192 rows x 16 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2167,7 +2315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "id": "340e5158",
    "metadata": {},
    "outputs": [
@@ -2507,7 +2655,7 @@
        "[192 rows x 16 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2531,7 +2679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "id": "70f0d005",
    "metadata": {},
    "outputs": [
@@ -3412,7 +3560,7 @@
        "[192 rows x 47 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3425,7 +3573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "id": "0080b673",
    "metadata": {},
    "outputs": [
@@ -4194,7 +4342,7 @@
        "[192 rows x 42 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4206,7 +4354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "id": "ce153336",
    "metadata": {},
    "outputs": [
@@ -4272,7 +4420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "id": "81d8d619",
    "metadata": {},
    "outputs": [],
@@ -4282,7 +4430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "id": "93a61b2c",
    "metadata": {},
    "outputs": [
@@ -4345,7 +4493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "id": "27c355b1",
    "metadata": {},
    "outputs": [
@@ -5066,7 +5214,7 @@
        "[192 rows x 38 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5077,7 +5225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "id": "cda98a7f",
    "metadata": {},
    "outputs": [],
@@ -5087,7 +5235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "id": "aa0d49fe",
    "metadata": {},
    "outputs": [
@@ -5095,7 +5243,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-23-9aefa4556631>:1: SettingWithCopyWarning: \n",
+      "<ipython-input-35-9aefa4556631>:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -5109,7 +5257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
    "id": "f78b2da2",
    "metadata": {},
    "outputs": [
@@ -5171,7 +5319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 37,
    "id": "9089b059",
    "metadata": {},
    "outputs": [],
@@ -5204,7 +5352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
