minor changes to deployment files

--- a/data mining/getstatscleaning.ipynb
+++ b/data mining/getstatscleaning.ipynb
@@ -4425,7 +4425,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_total.to_csv('cleaned_stats.csv')"
+    "#df_total.to_csv('cleaned_stats.csv')"
    ]
   },
   {
