change team_avg_statistics directory

--- a/model building/building_data_for_model.ipynb
+++ b/model building/building_data_for_model.ipynb
@@ -83,7 +83,7 @@
     "\n",
     "\n",
     "df_final = pd.read_csv('final_df.csv', index_col=0) \n",
-    "df_teams = pd.read_csv('Data processing/team_avg_statistics.csv', index_col=0) # from \n",
+    "df_teams = pd.read_csv('data mining/team_avg_statistics.csv', index_col=0) # from \n",
     "\n"
    ]
   },
