--- a/data mining/WC_history_mining.ipynb
+++ b/data mining/WC_history_mining.ipynb
@@ -1735,7 +1735,7 @@
    "outputs": [],
    "source": [
     "df_history.drop('outcomes',axis=1,inplace=True)\n",
-    "df_history.to_csv('Data processing/WC_history.csv')"
+    "df_history.to_csv('WC_history.csv')"
    ]
   },
   {
