--- a/Data processing/forming_final_data.ipynb
+++ b/Data processing/forming_final_data.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "df_team_stats3 = pd.read_csv('teams_statistics-3.csv')\n",
     "\n",
-    "df_wc_history = pd.read_csv('WC_history.csv') # downloaded from fifa website\n",
+    "df_wc_history = pd.read_csv('data mining/WC_history.csv') # downloaded from fifa website\n",
     "\n"
    ]
   },
