--- a/Model 2/build_data_for_model2.ipynb
+++ b/Model 2/build_data_for_model2.ipynb
@@ -1031,7 +1031,7 @@
    ],
    "source": [
     "#read the fifa rank dataset from https://www.transfermarkt.com/statistik/weltrangliste\n",
-    "fifa_rank = pd.read_csv('Fifa_Rank.csv')\n",
+    "fifa_rank = pd.read_csv('Data processing/Fifa_Rank.csv')\n",
     "fifa_rank = fifa_rank.drop('Unnamed: 0',axis=1)\n",
     "fifa_rank"
    ]
