--- a/Model 2/build_data_for_model2.ipynb
+++ b/Model 2/build_data_for_model2.ipynb
@@ -214,7 +214,7 @@
    ],
    "source": [
     "#read the team average statistics collected from https://fbref.com/ \n",
-    "team_stats = pd.read_csv('team_avg_statistics_including_friendly.csv')\n",
+    "team_stats = pd.read_csv('/data mining/team_avg_statistics_including_friendly.csv')\n",
     "\n",
     "team_stats = team_stats.drop('Unnamed: 0',axis=1)\n",
     "team_stats.head()"
