--- a/Model 2/build_data_for_model2.ipynb
+++ b/Model 2/build_data_for_model2.ipynb
@@ -214,7 +214,7 @@
    ],
    "source": [
     "#read the team average statistics collected from https://fbref.com/ \n",
-    "team_stats = pd.read_csv('/data mining/team_avg_statistics_including_friendly.csv')\n",
+    "team_stats = pd.read_csv('Data/team_avg_statistics_including_friendly.csv')\n",
     "\n",
     "team_stats = team_stats.drop('Unnamed: 0',axis=1)\n",
     "team_stats.head()"
@@ -471,7 +471,7 @@
    "source": [
     "#https://www.kaggle.com/datasets/martj42/international-football-results-from-1872-to-2017\n",
     "#read the international matches results from 2010 to 2018\n",
-    "hist_matches =  pd.read_csv('results.csv')\n",
+    "hist_matches =  pd.read_csv('Data/results.csv')\n",
     "hist_matches = hist_matches.drop('Unnamed: 0',axis=1)\n",
     "hist_matches"
    ]
@@ -1438,7 +1438,7 @@
     }
    ],
    "source": [
-    "df_api = pd.read_csv('/data mining/from_2017_matches_history.csv',index_col=[0])\n",
+    "df_api = pd.read_csv('Data/from_2017_matches_history.csv',index_col=[0])\n",
     "df_api"
    ]
   },
@@ -2543,7 +2543,7 @@
    ],
    "source": [
     "#read the fifa rank dataset from https://www.transfermarkt.com/statistik/weltrangliste\n",
-    "fifa_rank = pd.read_csv('Fifa_Rank.csv')\n",
+    "fifa_rank = pd.read_csv('Data/Fifa_Rank.csv')\n",
     "fifa_rank = fifa_rank.drop('Unnamed: 0',axis=1)\n",
     "fifa_rank"
    ]
@@ -5065,7 +5065,7 @@
    "outputs": [],
    "source": [
     "#save the data to a csv file\n",
-    "df_all.to_csv('final_df.csv')"
+    "df_all.to_csv('Data/final_df.csv')"
    ]
   },
   {
