--- a/Model 2/Model2_building.ipynb
+++ b/Model 2/Model2_building.ipynb
@@ -427,7 +427,7 @@
    ],
    "source": [
     "#reading the clean data\n",
-    "df = pd.read_csv('final_df.csv',index_col=0)\n",
+    "df = pd.read_csv('Data/final_df.csv',index_col=0)\n",
     "df"
    ]
   },
