--- a/data mining/mine_and_merge_teams_stats_dataframes.ipynb
+++ b/data mining/mine_and_merge_teams_stats_dataframes.ipynb
@@ -10399,7 +10399,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_all3.to_csv('team_avg_statistics_including_friendly.csv')"
+    "df_all3.to_csv('Model 2/Data/team_avg_statistics_including_friendly.csv')"
    ]
   },
   {
@@ -11994,6 +11994,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "a54cbe8b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 45,
    "id": "c4bceec0",
    "metadata": {},
@@ -12001,14 +12009,6 @@
    "source": [
     "df_all4.to_csv('team_avg_statistics_including_friendly_modified.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a54cbe8b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
