--- a/Model 2/build_data_for_model2.ipynb
+++ b/Model 2/build_data_for_model2.ipynb
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "id": "1a9f26c2",
    "metadata": {},
    "outputs": [
@@ -463,7 +463,7 @@
        "[7969 rows x 11 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "id": "6d682e86",
    "metadata": {},
    "outputs": [],
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "id": "ba1e5044",
    "metadata": {},
    "outputs": [],
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "id": "f7618f6e",
    "metadata": {},
    "outputs": [
@@ -525,7 +525,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "id": "8f617c64",
    "metadata": {},
    "outputs": [
@@ -545,7 +545,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/pandas/core/frame.py:4521: SettingWithCopyWarning: \n",
+      "/Users/zz/opt/anaconda3/lib/python3.8/site-packages/pandas/core/frame.py:5238: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -560,31 +560,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "id": "a1faa6c0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['Mali', 'Malta', 'Mauritania', 'Mauritius', 'Mexico', 'Moldova',\n",
-       "       'Mongolia', 'Montenegro', 'Morocco', 'Mozambique', 'Myanmar', 'Namibia',\n",
-       "       'Nepal', 'Netherlands', 'New Zealand', 'Nicaragua', 'Niger', 'Nigeria',\n",
-       "       'North Macedonia', 'Northern Ireland', 'Norway', 'Oman', 'Palestine',\n",
-       "       'Panama', 'Paraguay', 'Peru', 'Philippines', 'Poland', 'Portugal',\n",
-       "       'Puerto Rico', 'Qatar', 'Republic of Ireland', 'Romania', 'Russia',\n",
-       "       'Rwanda', 'San Marino', 'Saudi Arabia', 'Scotland', 'Senegal', 'Serbia',\n",
-       "       'Seychelles', 'Sierra Leone', 'Singapore', 'Slovakia', 'Slovenia',\n",
-       "       'South Africa', 'South Korea', 'South Sudan', 'Spain',\n",
+       "Index(['Maldives', 'Mali', 'Malta', 'Mauritania', 'Mauritius', 'Mexico',\n",
+       "       'Moldova', 'Mongolia', 'Montenegro', 'Morocco', 'Mozambique', 'Myanmar',\n",
+       "       'Namibia', 'Nepal', 'Netherlands', 'New Zealand', 'Nicaragua', 'Niger',\n",
+       "       'Nigeria', 'North Macedonia', 'Northern Ireland', 'Norway', 'Oman',\n",
+       "       'Palestine', 'Panama', 'Paraguay', 'Peru', 'Philippines', 'Poland',\n",
+       "       'Portugal', 'Puerto Rico', 'Qatar', 'Republic of Ireland', 'Romania',\n",
+       "       'Russia', 'Rwanda', 'San Marino', 'Saudi Arabia', 'Scotland', 'Senegal',\n",
+       "       'Serbia', 'Seychelles', 'Sierra Leone', 'Singapore', 'Slovakia',\n",
+       "       'Slovenia', 'South Africa', 'South Sudan', 'Spain',\n",
        "       'St. Kitts and Nevis', 'Sudan', 'Suriname', 'Sweden', 'Switzerland',\n",
        "       'Syria', 'Tajikistan', 'Tanzania', 'Thailand', 'Timor-Leste', 'Togo',\n",
-       "       'Trinidad and Tobago', 'Tunisia', 'Turkey', 'US Virgin Islands', 'USA',\n",
-       "       'Uganda', 'Ukraine', 'United Arab Emirates', 'Uruguay', 'Uzbekistan',\n",
-       "       'Vanuatu', 'Vietnam', 'Wales', 'Zambia', 'Zimbabwe'],\n",
+       "       'Trinidad and Tobago', 'Tunisia', 'Turkey', 'US Virgin Islands',\n",
+       "       'Uganda', 'Ukraine', 'United Arab Emirates', 'United States', 'Uruguay',\n",
+       "       'Uzbekistan', 'Vanuatu', 'Vietnam', 'Wales', 'Zambia', 'Zimbabwe'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "id": "74d8b3db",
    "metadata": {},
    "outputs": [],
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "id": "df7eeb60",
    "metadata": {},
    "outputs": [
@@ -624,7 +624,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-40-4211a0ee4532>:11: SettingWithCopyWarning: \n",
+      "<ipython-input-10-4211a0ee4532>:11: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -832,7 +832,7 @@
        "[7969 rows x 9 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "id": "4eaf3087",
    "metadata": {},
    "outputs": [
@@ -862,7 +862,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/pandas/core/frame.py:4438: SettingWithCopyWarning: \n",
+      "/Users/zz/opt/anaconda3/lib/python3.8/site-packages/pandas/core/frame.py:5039: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -982,7 +982,7 @@
        "4         Draw                0             0  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "id": "066e6622",
    "metadata": {},
    "outputs": [
@@ -1198,7 +1198,7 @@
        "[7969 rows x 9 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1209,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "id": "a90f536d",
    "metadata": {},
    "outputs": [
@@ -1221,7 +1221,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1240,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "id": "4667bbcf",
    "metadata": {},
    "outputs": [
@@ -1432,7 +1432,7 @@
        "[1596 rows x 8 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1444,7 +1444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 15,
    "id": "6fa3cdb4",
    "metadata": {},
    "outputs": [
@@ -1648,7 +1648,7 @@
        "[1596 rows x 9 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1674,7 +1674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 16,
    "id": "268a717b",
    "metadata": {},
    "outputs": [
@@ -1890,7 +1890,7 @@
        "[1596 rows x 10 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1902,7 +1902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 17,
    "id": "3aa8df38",
    "metadata": {},
    "outputs": [
@@ -2106,7 +2106,7 @@
        "[1596 rows x 9 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2122,7 +2122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 18,
    "id": "17a1c106",
    "metadata": {},
    "outputs": [],
@@ -2132,7 +2132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 19,
    "id": "51cf759e",
    "metadata": {},
    "outputs": [
@@ -2336,7 +2336,7 @@
        "[9051 rows x 9 columns]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2356,7 +2356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 20,
    "id": "77698c6e",
    "metadata": {},
    "outputs": [
@@ -2536,7 +2536,7 @@
        "[207 rows x 7 columns]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2550,7 +2550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 21,
    "id": "46cb68bc",
    "metadata": {},
    "outputs": [
@@ -2571,7 +2571,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2583,7 +2583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 22,
    "id": "9c80fec2",
    "metadata": {},
    "outputs": [],
@@ -2594,7 +2594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 23,
    "id": "e90aca64",
    "metadata": {},
    "outputs": [],
@@ -2616,7 +2616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 24,
    "id": "b6f94a70",
    "metadata": {},
    "outputs": [
@@ -2931,7 +2931,7 @@
        "[7995 rows x 15 columns]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2943,7 +2943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 25,
    "id": "67a12fce",
    "metadata": {},
    "outputs": [
@@ -3343,7 +3343,7 @@
        "[7211 rows x 21 columns]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3355,7 +3355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 26,
    "id": "071d1183",
    "metadata": {},
    "outputs": [],
@@ -3366,7 +3366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 27,
    "id": "212599b7",
    "metadata": {},
    "outputs": [
@@ -3705,7 +3705,7 @@
        "[7211 rows x 17 columns]"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3724,7 +3724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 28,
    "id": "2666e9cf",
    "metadata": {},
    "outputs": [
@@ -3810,7 +3810,7 @@
        "0        0.0         1.0         1.0       2.0          1.0          2.0  "
       ]
      },
-     "execution_count": 92,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3824,7 +3824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 29,
    "id": "6499aab9",
    "metadata": {},
    "outputs": [
@@ -3910,7 +3910,7 @@
        "0        0.0         1.0         1.0       2.0          1.0          2.0  "
       ]
      },
-     "execution_count": 93,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3924,7 +3924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 30,
    "id": "65ea8960",
    "metadata": {},
    "outputs": [
@@ -4797,7 +4797,7 @@
        "[6019 rows x 55 columns]"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4810,7 +4810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 31,
    "id": "8e607f14",
    "metadata": {},
    "outputs": [
@@ -4899,7 +4899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 32,
    "id": "4b9735ac",
    "metadata": {},
    "outputs": [
@@ -4921,7 +4921,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4932,7 +4932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 33,
    "id": "27162a26",
    "metadata": {},
    "outputs": [],
@@ -4948,7 +4948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 34,
    "id": "c17bf665",
    "metadata": {},
    "outputs": [
@@ -4970,7 +4970,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4982,7 +4982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 35,
    "id": "1312ba14",
    "metadata": {},
    "outputs": [
@@ -5059,7 +5059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 36,
    "id": "b2ff639f",
    "metadata": {},
    "outputs": [],
@@ -5093,7 +5093,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
