--- a/Model 2/build_data_for_model2.ipynb
+++ b/Model 2/build_data_for_model2.ipynb
@@ -17,7 +17,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
+   "id": "25a21c51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "s3b1 = 'https://storage.googleapis.com/input-soccerpred/team_avg_statistics_including_friendly.csv'\n",
+    "s3b2 = 'https://storage.googleapis.com/input-soccerpred/results.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6e61b6fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#read the team average statistics collected from https://fbref.com/ \n",
+    "team_stats = pd.read_csv(s3b1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "1fb72ec8",
    "metadata": {},
    "outputs": [
@@ -207,15 +230,12 @@
        "4  0.000000  0.000000  0.000000  0.000000  0.000000  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#read the team average statistics collected from https://fbref.com/ \n",
-    "team_stats = pd.read_csv('Data/team_avg_statistics_including_friendly.csv')\n",
-    "\n",
     "team_stats = team_stats.drop('Unnamed: 0',axis=1)\n",
     "team_stats.head()"
    ]
