--- a/Model 2/build_data_for_model2.ipynb
+++ b/Model 2/build_data_for_model2.ipynb
@@ -242,7 +242,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
+   "id": "57555546",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#https://www.kaggle.com/datasets/martj42/international-football-results-from-1872-to-2017\n",
+    "#read the international matches results from 2010 to 2018\n",
+    "hist_matches =  pd.read_csv(s3b2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "1a9f26c2",
    "metadata": {},
    "outputs": [
@@ -483,15 +495,13 @@
        "[7969 rows x 11 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#https://www.kaggle.com/datasets/martj42/international-football-results-from-1872-to-2017\n",
-    "#read the international matches results from 2010 to 2018\n",
-    "hist_matches =  pd.read_csv('Data/results.csv')\n",
+    "\n",
     "hist_matches = hist_matches.drop('Unnamed: 0',axis=1)\n",
     "hist_matches"
    ]
